# Hydrology

./: .<generator object Path.glob at 0x10d0a0200>.baiduyun.uploading.cfg  .flake8  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  DEVELOPMENT_ROADMAP_2024.md  DOCKER_README.md  Dockerfile  INSTALL_GUIDE.md  PRODUCT_CATALOG.md  README.md  benchmark_results.json  calibrate_with_enkf.py  check_dependencies.py  config.yaml  conftest.py  create_gis_data.py  delineate_watershed.py  dependencies_list.txt  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  generate_parameter_zones.py  h --force-with-lease origin hydro-model-impl  h origin hydro-model-impl  list_wbt_tools.py  mcp_server.py  memory_profiler.py  mypy.ini  optimization_analysis.json  plot_enkf_results.py  plot_zones.py  pyproject.toml  pytest.ini  requirements.txt  run_all_examples.py  run_api.py  run_example.py  (+8 more)
.omc/: project-memory.json
.omx/: metrics.json
.team/: todo.md
analysis/: plot_interpolation_uncertainty.py
api/: README.md  __init__.py  app.py  auth.py  config.py  middleware.py  models.py  routes.py  test_api.py  utils.py
common/: __init__.py  base_model.py  boundary_conditions.py  config.py  config_parser.py  controller.py  db_loader.py  error_handler.py  junction.py  lateral_link.py  parallel_controller.py  performance_dashboard.py  performance_monitor.py  program_contract_bridge.py  program_contract_outputs.py  security.py  security_audit.py
config/: performance_config.yaml  security_config.py
configs/: agent_registry.yaml  agent_visible_workflows.yaml  auto_learning_by_case.yaml  auto_modeling_metrics.schema.json  autonomy_quality_standard.yaml  batch_init_cases.yaml  case_knowledge_schema.yaml  case_schema.yaml  daduhe.pre_split_20260401T092521.yaml  daduhe.pre_split_20260401T213935.yaml  daduhe.pre_split_20260401T214048.yaml  daduhe.pre_split_20260402T041850.yaml  daduhe.pre_split_20260402T045137.yaml  daduhe.pre_split_20260402T051340.yaml  daduhe.pre_split_20260402T074724.yaml  daduhe.pre_split_20260402T081422.yaml  daduhe.pre_split_20260402T081513.yaml  daduhe.pre_split_20260402T082351.yaml  daduhe.pre_split_20260402T082816.yaml  daduhe.pre_split_20260402T083307.yaml  daduhe.pre_split_20260402T085241.yaml  daduhe.pre_split_20260402T153559.yaml  daduhe.pre_split_20260402T160023.yaml  daduhe.pre_split_20260409T071937.yaml  daduhe.pre_split_20260409T100003.yaml  daduhe.pre_split_20260409T103405.yaml  daduhe.v20260415T104838.yaml  daduhe.v20260416T072433.yaml  daduhe.v20260416T072434.yaml  daduhe.yaml  dl_forecast_daduhe.yaml  ensemble_forecast_daduhe.yaml  final_report_governance.yaml  gateway_protocol.schema.json  graphify_integration.yaml  hydrodesk_agent_stack.json  hydrodesk_autonomous_waternet_e2e_loop.yaml  hydrodesk_e2e_acceptance_rollout.yaml  hydrodesk_six_case_e2e_loop.yaml  jiaodongtiaoshui.pre_split_20260407T193302.yaml  (+50 more)
data/: catchment_definition.csv  hourly_rainfall.csv  multi_gauge_rainfall.csv  observed_flow.csv  pet.csv  rainfall.csv  rainfall_with_missing.csv
dl_model/: gnn_model.pth  gnn_model.py  lstm_model.pth  lstm_model.py  train_gnn.py  train_lstm.py  ts_dataset.py
docs/: 2d_hydraulic_model.md  CURSOR_INTEGRATION_PLAN.md  advanced_configuration.md  algorithm_examples.md  analysis_tools.md  areal_precipitation.md  basic_model_example.md  case_study_tutorial.md  conf.py  contributing.rst  daduhe_watershed_report.md  data_assimilation.md  database_integration.md  developer_guide.md  development_progress_phase3_part2.md  development_progress_phase3_part3.md  development_progress_phase3_part4.md  development_progress_phase3_part5.md  dl_models.md  enkf_calibration_example.md  examples.rst  gis_delineation_example.md  gui_manual.md  hydraulic_model.md  hydrology_modules.md  index.md  index.rst  installation.rst  ml_integration.md  performance_improvements.md  phase2_user_experience_summary.md  phase3_development_progress.md  phase3_development_tasks.md  preprocessing.md  program_contract_alignment.md  pyswmm_interface.md  quickstart.rst  real_twin_framework.md  release_handoff.md  ultimate_case_study_tutorial.md  (+2 more)
examples/: build_release_manifest.py  calibrate_with_enkf.py  config_1d_hydraulic.yaml  config_coupled.yaml  config_hymod.yaml  config_looped_network.yaml  config_pump.yaml  config_scs.yaml  config_xaj.yaml  create_gis_data.py  generate_html_report.py  generate_parameter_zones.py  performance_monitoring_example.py  plot_enkf_results.py  plot_zones.py  run_2d_model.py  run_coupled_model.py  run_example.py  run_explicit_coupling_test.py  run_full_pipeline.py  run_hydro_model_pyswmm_style.py  run_hymod_example.py  run_implicit_coupling_test.py  run_junction_model.py  run_lateral_coupling_test.py  run_looped_network_example.py  run_looped_network_test.py  run_muskingum_cunge_example.py  run_muskingum_example.py  run_network_example.py  run_preissmann_simulation.py  run_pump_from_config.py  run_pump_model.py  run_pyswmm_style_example.py  run_scs_example.py  run_structure_model.py  run_uh_example.py  run_ultimate_case.py  run_workflow_baseline.py  run_xaj_example.py  (+2 more)
gis_data/: dem.tif  gauging_stations.csv  land_use.dbf  land_use.shp  land_use.shx  rain_gauges.csv  river.dbf  river.shp  river.shx  soil.dbf  soil.shp
gui/: __init__.py  config_generator.py  main.py  modern_main.py  utils.py
hydro_model/: __init__.py  areal_precipitation.py  business_run_digest.py  calibration.py  cascade_hydraulics.py  catchment.py  curve_calibration.py  dem_pipeline.py  enkf.py  generic_model_adapter.py  horton_infiltration.py  hos_standard.py  hydraulic_simulator.py  hydro_claude_adapter.py  hydrology_mcp_tools.py  hymod_functions.py  knowledge_mining.py  model.py  object_report_generator.py  routing.py  (+12 more)
(+847 files in other folders)
