[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hydrology-framework"
version = "2024.1.0"
description = "Advanced Hydrological Modeling Framework with 1D/2D Coupling"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Hydrology",
]
keywords = ["hydrology", "modeling", "simulation", "water-resources", "hydraulics"]
authors = [
    {name = "Hydrology Framework Team", email = "contact@hydrology-framework.org"}
]
maintainers = [
    {name = "Hydrology Framework Team", email = "contact@hydrology-framework.org"}
]
dependencies = [
    "numpy>=1.20.0",
    "pandas>=1.3.0",
    "matplotlib>=3.4.0",
    "pyyaml>=5.4.0",
    "scipy>=1.7.0",
]

[project.optional-dependencies]
gui = [
    "dash>=2.0.0",
    "plotly>=5.0.0",
    "dash-bootstrap-components>=1.0.0",
]
ml = [
    "xgboost>=1.5.0",
    "lightgbm>=3.2.0",
    "joblib>=1.0.0",
    "scikit-learn>=1.0.0",
]
gis = [
    "whitebox>=2.0.0",
    "rasterio>=1.2.0",
    "geopandas>=0.10.0",
]
dev = [
    "pytest>=6.0.0",
    "pytest-cov>=3.0.0",
    "pytest-xdist>=2.0.0",
    "black>=22.0.0",
    "isort>=5.10.0",
    "flake8>=4.0.0",
    "mypy>=0.950",
    "bandit>=1.7.0",
    "safety>=2.0.0",
    "pylint>=2.12.0",
]

[project.urls]
Homepage = "https://github.com/hydrology-framework/hydrology"
Documentation = "https://hydrology-framework.readthedocs.io"
Repository = "https://github.com/hydrology-framework/hydrology.git"
"Bug Tracker" = "https://github.com/hydrology-framework/hydrology/issues"
Changelog = "https://github.com/hydrology-framework/hydrology/blob/main/CHANGELOG.md"

[project.scripts]
hydrology = "hydro_model.model:main"
hydrology-gui = "gui.main:main"

# Black configuration
[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
(
  /(
      \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | hydrology_env
  )/
)
'''

# isort configuration
[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_glob = ["hydrology_env/*", "build/*", "dist/*"]

# pytest configuration
[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "benchmark: marks tests as performance benchmarks",
    "gui: marks tests that require GUI components",
    "network: marks tests that require network access",
]
filterwarnings = [
    "error",
    "ignore::UserWarning",
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

# Coverage configuration
[tool.coverage.run]
source = [".", "hydro_model", "model_2d", "preissmann_model", "gui", "common"]
omit = [
    "*/tests/*",
    "*/test_*",
    "setup.py",
    "hydrology_env/*",
    "build/*",
    "dist/*",
    "examples/*",
    "scripts/*",
]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
ignore_errors = true
show_missing = true
skip_covered = false
skip_empty = false
sort = "Cover"

[tool.coverage.html]
directory = "htmlcov"

# MyPy configuration
[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "whitebox.*",
    "dash.*",
    "plotly.*",
    "xgboost.*",
    "lightgbm.*",
    "emcee.*",
    "corner.*",
]
ignore_missing_imports = true

# Bandit security configuration
[tool.bandit]
exclude_dirs = ["tests", "hydrology_env", "build", "dist"]
skips = ["B101", "B601"]

# Pylint configuration
[tool.pylint.messages_control]
disable = [
    "C0103",  # Invalid name
    "C0114",  # Missing module docstring
    "C0115",  # Missing class docstring
    "C0116",  # Missing function docstring
    "R0903",  # Too few public methods
    "R0913",  # Too many arguments
    "W0613",  # Unused argument
    "W0621",  # Redefined outer name
]

[tool.pylint.format]
max-line-length = 88

[tool.pylint.design]
max-args = 10
max-locals = 20
max-branches = 15
max-statements = 60
